# CARLsimGUI

./: .gitignore  CMakeLists.txt  README.md
application/: CMakeLists.txt  carlsimgui.rc
application/src/: Main.cpp
applicationlibrary/: CMakeLists.txt  carlsimguiapplication_resource.rc  resource.h
applicationlibrary/include/: AbstractAnalysisTimeStepThread.h  AbstractAnalysisWidget.h  AbstractConnectionBuilder.h  AbstractConnectionWidget.h  AbstractDeviceManager.h  AbstractDeviceWidget.h  AbstractExperimentWidget.h  AbstractExportAnalysisDialog.h  AbstractGraphDialog.h  AbstractGraphWidget.h  AbstractInjectorWidget.h  AbstractMonitorWidget.h  AbstractNeuronBuilder.h  AbstractParametersEditDialog.h  AbstractSimulation.h  AbstractSpectrogramData.h  AnalysesModel.h  AnalysesTableView.h  AnalysisLoaderWidget.h  AnalysisParameterDialog.h  AnalysisRunner.h  AnalysisSpectrogram.h  ArchivePlayerThread.h  ArchiveWidget.h  ConnectionGroupDialog.h  ConnectionGroupModel.h  ConnectionGroupTableView.h  ConnectionManager.h  ConnectionWidget.h  ConnectionsModel.h  ConnectionsTableView.h  DatabaseManager.h  DescriptionDialog.h  EventRouter.h  Globals.h  HeatColorBar.h  LoadAnalysisDialog.h  MembranePotentialGraphDialog.h  MembranePotentialGraphWidget.h  NetworkDialog.h  (+36 more)
applicationlibrary/src/: ArchivePlayerThread.cpp  Globals.cpp  NetworkDisplay.cpp  NetworkViewer.cpp  NetworksBuilder.cpp  PluginManager.cpp  SpikeStreamApplication.cpp  SpikeStreamMainWindow.cpp
applicationlibrary/src/analysis/: AbstractGraphDialog.cpp  AbstractSpectrogramData.cpp  AnalysisSpectrogram.cpp
applicationlibrary/src/builders/: AbstractConnectionBuilder.cpp
applicationlibrary/src/database/: DatabaseManager.cpp
applicationlibrary/src/dialogs/: AbstractParametersEditDialog.cpp  ConnectionGroupDialog.cpp  DescriptionDialog.cpp  MembranePotentialGraphDialog.cpp  NetworkDialog.cpp  NeuronGroupDialog.cpp  NeuronGroupSelectionDialog.cpp  NeuronParametersDialog.cpp  NeuronParametersEditDialog.cpp  ParametersDialog.cpp  PluginsDialog.cpp  SpikeRasterDialog.cpp  SynapseParametersDialog.cpp  SynapseParametersEditDialog.cpp  ViewParametersDialog.cpp
applicationlibrary/src/managers/: ConnectionManager.cpp  NetworkManager.cpp
applicationlibrary/src/models/: ConnectionGroupModel.cpp  ConnectionsModel.cpp  NeuronGroupModel.cpp  NeuronGroupSelectionModel.cpp  NeuronParametersModel.cpp  SynapseParametersModel.cpp  TruthTableModel.cpp
applicationlibrary/src/simulation/: AbstractDeviceManager.cpp  AbstractDeviceWidget.cpp  AbstractExperimentWidget.cpp  AbstractInjectorWidget.cpp  AbstractMonitorWidget.cpp  AbstractSimulation.cpp
applicationlibrary/src/views/: ConnectionGroupTableView.cpp  NeuronGroupSelectionView.cpp  NeuronGroupTableView.cpp  NeuronParametersView.cpp  SynapseParametersView.cpp
applicationlibrary/src/widgets/: AbstractConnectionWidget.cpp  AbstractGraphWidget.cpp  ArchiveWidget.cpp  MembranePotentialGraphWidget.cpp  NetworkViewerProperties.cpp  NetworksWidget - Copy.cpp  NetworksWidget.cpp  SimulationLoaderWidget.cpp  SpikeRasterWidget.cpp
installation/dbconfigtool/: CMakeLists.txt  dbconfigtool_resource.rc
installation/dbconfigtool/src/: DBConfigMainWindow.cpp  DBConfigMainWindow.h  DBDetailsWidget.cpp  DBDetailsWidget.h  Main.cpp  SuccessWidget.cpp  SuccessWidget.h
simulators/carlsim/: CMakeLists.txt  carlsimwrapper.qrc  carlsimwrapper_de_DE.qm  carlsimwrapper_de_DE.ts  carlsimwrapper_en_US.qm  carlsimwrapper_en_US.ts  carlsimwrapper_resource.rc
simulators/carlsim/devices/cns/: CMakeLists.txt  cns.qrc  cns_de_DE.qm  cns_de_DE.ts  cns_en_US.ts  cns_resource.rc  resource.h
simulators/carlsim/experiments/epropexperiment/: CMakeLists.txt
simulators/carlsim/experiments/epropexperiment/scripts/: Morris_smart_rat_calc.m  complexity_calc.m  eprop_tolman_convergence.m  (+10 more)
simulators/carlsim/experiments/exampleexperiment/: CMakeLists.txt  exampleexperiment.pro
simulators/carlsim/experiments/vteexperiment/: CMakeLists.txt
simulators/carlsim/experiments/wmexperiment/: CMakeLists.txt  CMakeLists.txt.bak
simulators/carlsim/include/: AbstractSTDPFunction.h  CarlsimAerSpikeGenerator.h  CarlsimAerSpikeGenerator.h.bak  CarlsimGenerator.h  CarlsimGeneratorContainer.h  CarlsimLib.h  CarlsimLoader.h  CarlsimParametersDialog.h  CarlsimSpikeGenerator.h  CarlsimSpikeGeneratorContainer.h  CarlsimWidget.h  CarlsimWrapper.h  DaSTDPFunction.h  DeviceLoaderWidget.h  ExperimentLoaderWidget.h  InjectorLoaderWidget.h  ModelParametersDialog.h  MonitorLoaderWidget.h  NcMergedDockWidget.h  NcMergedToolBar.h  NcTimeDiffLabel.h  Pattern.h  PatternManager.h  STDPFunctions.h  StandardSTDPFunction.h  StepSTDPFunction.h  TimePanelWidget.h  api.h  carlsim_types.h  ui_TimePanel.h
simulators/carlsim/injectors/noise/: CMakeLists.txt
simulators/carlsim/injectors/template/: current.pro
simulators/carlsim/monitors/oat/: CMakeLists.txt
simulators/carlsim/src/dialogs/: CarlsimParametersDialog.cpp  ModelParametersDialog.cpp
simulators/carlsim/src/gui/: CarlsimWidget.cpp  DeviceLoaderWidget.cpp  ExperimentLoaderWidget.cpp  InjectorLoaderWidget.cpp  MonitorLoaderWidget.cpp  NcMergedDockWidget.cpp  NcMergedToolBar.cpp  NcTimeDiffLabel.cpp  TimePanelWidget.cpp
simulators/carlsim/src/managers/: PatternManager.cpp
simulators/carlsim/src/model/: AbstractSTDPFunction.cpp  CarlsimAerSpikeGenerator.cpp  CarlsimGenerator.cpp  CarlsimGeneratorContainer.cpp  CarlsimLib.cpp  CarlsimLoader.cpp  CarlsimSpikeGenerator.cpp  CarlsimSpikeGeneratorContainer.cpp  CarlsimWrapper.cpp  DaSTDPFunction.cpp  Pattern.cpp  STDPFunctions.cpp  StandardSTDPFunction.cpp  StepSTDPFunction.cpp  carlsim_types.cpp
simulators/carlsim/test/: CMakeLists.txt  testcarlsim_resource.rc
simulators/carlsim/test/src/: Main.cpp  TestCarlsimAxonPlast.cpp  TestCarlsimAxonPlast.h  TestCarlsimLibrary.cpp  TestCarlsimLibrary.h  TestCarlsimWrapper.cpp  TestCarlsimWrapper.h  TestRunner.cpp  TestRunner.h
simulators/carlsim/ui/: TimePanel.ui
testlibrary/: CMakeLists.txt  carlsimguitest_resource.rc
testlibrary/include/: TestDao.h  api.h
testlibrary/src/: TestDao.cpp
(+137 files in other folders)
